<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:src="@drawable/mylogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorAccent"
        android:text="@string/choose_job"
        android:textSize="16dp" />

    <Button
        android:id="@+id/breederButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:background="@color/colorButton"
        android:text="@string/breeder" />

    <Button
        android:id="@+id/vetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/breederButton"
        android:background="@color/colorButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/vet" />

    <TextView
        android:id="@+id/textChooseLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/spLanguage"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="80dp"
        android:textColor="@color/colorAccent"
        android:text="@string/chooseLang"
        android:textSize="16dp" />
    <Spinner
        android:id="@+id/spLanguage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        android:tooltipText="@string/chooseLang" />


</RelativeLayout>